usescase-1/networkpolicy-disallow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
        name: allow
        namespace: loadbalancer
spec:
        podSelector:
                matchLabels:
        policyTypes:
                - Ingress
                - Egress
        ingress: []
        egress: []
