usescase-1/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyegress
spec:
  crd:
    spec:
      names:
        kind: K8sDenyEgress
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyegress 
        violation [{"msg": msg}] {
          input.review.object.metadata.namespace == "loadbalancer"
          some i
          input.review.object.spec.policyTypes[i] == "Egress"
          msg := "You cannot apply Egress policies to the loadbalancer namespace."

        }
